--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
  
  
         <a href=”tel:+1-613-875-2008″>613-875-2008</a></h2>
+        <p><i class="fa-solid fa-envelope"></i><a href = "mailto: ryan.gauthier85@gmail.com">ryan.gauthier@hallmarkottawa.com</a></p>
        
 
     </div>
