change tel: to callto:

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h2 class="contact-number"><i class="fa-solid fa-phone"></i>
  
  
-        <a href=”tel:+1-613-875-2008″>613-875-2008</a></h2>
+        <a href=”callto:+16138752008″>613-875-2008</a></h2>
         <p><i class="fa-solid fa-envelope"></i><a href = "mailto: ryan.gauthier85@gmail.com">ryan.gauthier@hallmarkottawa.com</a></p>
        
 
