email word wrap

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  
  
         <a href=”callto:+16138752008″>613-875-2008</a></h2>
-        <p><i class="fa-solid fa-envelope"></i><a href = "mailto: ryan.gauthier85@gmail.com">ryan.gauthier@hallmarkottawa.com</a></p>
+        <p class="email-text"><i class="fa-solid fa-envelope"></i><a href = "mailto: ryan.gauthier85@gmail.com">ryan.gauthier@hallmarkottawa.com</a></p>
        
 
     </div>
